Move chrome features to a component

By moving the feature source into a component, we won't end up with
multiple instances of the feature constants across multiple component
build libraries.  This should eliminate DCHECK failures that crop up
when components check if features are enabled.

BUG=872073

Change-Id: Ia82e990596d52076027499fe23b73c870c64b5e1
Reviewed-on: https://chromium-review.googlesource.com/1177895
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584834}
Former-commit-id: d33615ea8ee82c31b1aafaa78691d43a6db4152c